--- a/bookmarkManager/index.html
+++ b/bookmarkManager/index.html
@@ -320,5 +320,148 @@
       </div>
     </section>
     <!--Download Section Ends-->
+    <!--Faq section-->
+    <section id="faq">
+      <div class="container mx-auto">
+        <h2
+          class="font-semibold capitalize text-center text-3xl mb-6 md:text-4xl"
+        >
+          Frequently asked questions
+        </h2>
+        <p class="max-w-lg px-6 mx-auto text-center text-grayishBlue">
+          Here are some of our FAQs. If you have any other questions you'd like
+          answered please feel free to email us.
+        </p>
+        <!--accordion-->
+        <section id="accordion">
+          <div class="container mx-auto px-6 mb-32">
+            <!--Accordian Container-->
+            <div class="max-w-2xl m-8 mx-auto overflow-hidden">
+              <!--Tab1-->
+              <div class="py-1 border-b outline-none group" tabindex="1">
+                <!--Tab Question / Arrow-->
+                <div
+                  class="flex items-center justify-between py-3 text-gray-500 transition duration-500 cursor-pointer group ease"
+                >
+                  <!--Tab Title-->
+                  <div
+                    class="transition duration-500 ease group-hover:text-red-500"
+                  >
+                    What is Bookmark?
+                  </div>
+                  <!--Arrow-->
+                  <div
+                    class="transition duration-500 ease group-focus:-rotate-180 group-focus:text-red-500"
+                  >
+                    <img src="images/icon-arrow.svg" alt="arrow" />
+                  </div>
+                </div>
+                <!--Tab Question / Arrow Ends-->
+                <!--Tab Answer -->
+                <div
+                  class="overflow-hidden transition duration-500 group-focus:max-h-screen max-h-0 ease"
+                >
+                  <p class="py-2 text-justify text-gray-400">
+                    A clean and simple interface to organize your favourite
+                    websites. Open a new browser tab and see your sites load
+                    instantly.
+                  </p>
+                </div>
+              </div>
+              <!--Tab2-->
+              <div class="py-1 border-b outline-none group" tabindex="2">
+                <!--Tab Question / Arrow-->
+                <div
+                  class="flex items-center justify-between py-3 text-gray-500 transition duration-500 cursor-pointer group ease"
+                >
+                  <!--Tab Title-->
+                  <div
+                    class="transition duration-500 ease group-hover:text-red-500"
+                  >
+                    How can I request a new browser?
+                  </div>
+                  <!--Arrow-->
+                  <div
+                    class="transition duration-500 ease group-focus:-rotate-180 group-focus:text-red-500"
+                  >
+                    <img src="images/icon-arrow.svg" alt="arrow" />
+                  </div>
+                </div>
+                <!--Tab Question / Arrow Ends-->
+                <!--Tab Answer -->
+                <div
+                  class="overflow-hidden transition duration-500 group-focus:max-h-screen max-h-0 ease"
+                >
+                  <p class="py-2 text-justify text-gray-400">
+                    Download the Extension for the browser in your Browser
+                    Extension market-place.We've got more browsers in the
+                    pipeline.
+                  </p>
+                </div>
+              </div>
+              <!--Tab3-->
+              <div class="py-1 border-b outline-none group" tabindex="3">
+                <!--Tab Question / Arrow-->
+                <div
+                  class="flex items-center justify-between py-3 text-gray-500 transition duration-500 cursor-pointer group ease"
+                >
+                  <!--Tab Title-->
+                  <div
+                    class="transition duration-500 ease group-hover:text-red-500"
+                  >
+                    Is there a mobile app?
+                  </div>
+                  <!--Arrow-->
+                  <div
+                    class="transition duration-500 ease group-focus:-rotate-180 group-focus:text-red-500"
+                  >
+                    <img src="images/icon-arrow.svg" alt="arrow" />
+                  </div>
+                </div>
+                <!--Tab Question / Arrow Ends-->
+                <!--Tab Answer -->
+                <div
+                  class="overflow-hidden transition duration-500 group-focus:max-h-screen max-h-0 ease"
+                >
+                  <p class="py-2 text-justify text-gray-400">
+                    Mobile apps in coming soon in your favorite mobile mobile
+                    OS.
+                  </p>
+                </div>
+              </div>
+              <!--Tab4-->
+              <div class="py-1 border-b outline-none group" tabindex="4">
+                <!--Tab Question / Arrow-->
+                <div
+                  class="flex items-center justify-between py-3 text-gray-500 transition duration-500 cursor-pointer group ease"
+                >
+                  <!--Tab Title-->
+                  <div
+                    class="transition duration-500 ease group-hover:text-red-500"
+                  >
+                    What about other Chromium browsers
+                  </div>
+                  <!--Arrow-->
+                  <div
+                    class="transition duration-500 ease group-focus:-rotate-180 group-focus:text-red-500"
+                  >
+                    <img src="images/icon-arrow.svg" alt="arrow" />
+                  </div>
+                </div>
+                <!--Tab Question / Arrow Ends-->
+                <!--Tab Answer -->
+                <div
+                  class="overflow-hidden transition duration-500 group-focus:max-h-screen max-h-0 ease"
+                >
+                  <p class="py-2 text-justify text-gray-400">
+                    We've got more browsers in the pipeline.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </section>
   </body>
 </html>
