--- a/bookmarkManager/index.html
+++ b/bookmarkManager/index.html
@@ -497,5 +497,34 @@
         </form>
       </div>
     </section>
+    <!--footer-->
+    <footer class="py-16 bg-veryDarkBlue">
+      <!--footer flex container-->
+      <div
+        class="container flex flex-col items-center justify-between mx-auto space-y-16 px-6 md:flex-row md:space-y-0"
+      >
+        <!--Logo/Menu container-->
+        <div
+          class="flex flex-col items-center justify-between space-y-8 text-lg text-grayishBlue font-light md:flex-row md:space-y-0 md:space-x-14"
+        >
+          <img src="images/logo-bookmark-footer.svg" alt="logo" class="mb-1" />
+          <a href="#features" class="uppercase hover:text-softRed">Features</a>
+          <a href="#download" class="uppercase hover:text-softRed">Download</a>
+          <a href="#faq" class="uppercase hover:text-softRed">Faq</a>
+        </div>
+        <!--Socials container-->
+        <div class="flex space-x-10">
+          <a href="#"
+            ><img
+              src="images/icon-facebook.svg"
+              alt="facebook"
+              class="h-6 ficon"
+          /></a>
+          <a href="#"
+            ><img src="images/icon-twitter.svg" alt="twitter" class="h-6 ficon"
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
