--- a/bookmarkManager/index.html
+++ b/bookmarkManager/index.html
@@ -21,7 +21,7 @@
       <div class="flex items-center justify-between space-x-20 my-6">
         <!--logo-->
         <div class="z-30">
-          <img src="images/logo-bookmark.svg" alt="logo" />
+          <img src="images/logo-bookmark.svg" alt="logo" id="logo" />
         </div>
         <!--menu item-->
         <div
@@ -39,6 +39,33 @@
             class="px-8 py-2 text-white bg-softRed border-2 border-softRed rounded-lg shadow-md hover:text-softRed hover:bg-white"
             >Login</a
           >
+        </div>
+        <!--Hamburger Button-->
+        <button
+          id="menu-btn"
+          class="z-30 block md:hidden focus:outline-none hamburger"
+        >
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+      </div>
+      <!--Mobile Menu-->
+      <div
+        id="menu"
+        class="fixed inset-0 z-20 hidden flex-col items-center self end w-full h-full m-h-screen px-6 py-1 pt-24 pb-4 tracking-widest text-white uppercase divide-y divide-gray-500 opacity-90 bg-veryDarkBlue"
+      >
+        <div class="w-full py-3 text-center mobileMenu">
+          <a href="#features" class="block hover:text-softRed">Features</a>
+        </div>
+        <div class="w-full py-3 text-center mobileMenu">
+          <a href="#download" class="block hover:text-softRed">Download</a>
+        </div>
+        <div class="w-full py-3 text-center mobileMenu">
+          <a href="#faq" class="block hover:text-softRed">Faq</a>
+        </div>
+        <div class="w-full py-3 text-center mobileMenu">
+          <a href="#" class="block hover:text-softRed">login</a>
         </div>
       </div>
     </nav>
