--- a/caferio/index.html
+++ b/caferio/index.html
@@ -19,7 +19,15 @@
     <title>Caferio</title>
   </head>
   <body>
-    <h1 class="text-4xl mb-4">Welcome</h1>
-    <p>Start building your Tailwind project</p>
+    <!--Header Section-->
+    <header class="header">
+      <div class="container">
+        <div class="row">
+          <div class="header-left-col">
+            <h4 class="header-badge">enjoy drink & food</h4>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
