--- a/caferio/index.html
+++ b/caferio/index.html
@@ -25,6 +25,10 @@
         <div class="row">
           <div class="header-left-col">
             <h4 class="header-badge">enjoy drink & food</h4>
+            <h1 class="header-heading">
+              tastiest food
+              <span class="header-delivery">delivery</span> service
+            </h1>
           </div>
         </div>
       </div>
