--- a/caferio/index.html
+++ b/caferio/index.html
@@ -29,6 +29,9 @@
               tastiest food
               <span class="header-delivery">delivery</span> service
             </h1>
+            <p class="header-paragraph">
+              What you think, What you feel, What you are = What you eat.
+            </p>
           </div>
         </div>
       </div>
