header customer list

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -32,6 +32,51 @@
             <p class="header-paragraph">
               What you think, What you feel, What you are = What you eat.
             </p>
+            <ul class="header-customers-ul">
+              <li class="header-customers-li">
+                <img
+                  src="images/customersList/user-1.jpg"
+                  alt="customer image"
+                  class="header-customers-li-img"
+                />
+              </li>
+              <li class="header-customers-li">
+                <img
+                  src="images/customersList/user-2.jpg"
+                  alt="customer image"
+                  class="header-customers-li-img"
+                />
+              </li>
+              <li class="header-customers-li">
+                <img
+                  src="images/customersList/user-3.jpg"
+                  alt="customer image"
+                  class="header-customers-li-img"
+                />
+              </li>
+              <li class="header-customers-li">
+                <img
+                  src="images/customersList/user-4.jpg"
+                  alt="customer image"
+                  class="header-customers-li-img"
+                />
+              </li>
+              <li class="header-customers-li">
+                <img
+                  src="images/customersList/user-5.jpg"
+                  alt="customer image"
+                  class="header-customers-li-img"
+                />
+              </li>
+              <li class="header-customers-li">
+                <img
+                  src="images/customersList/user-6.jpg"
+                  alt="customer image"
+                  class="header-customers-li-img"
+                />
+              </li>
+              <li class="header-customers-ul-li-last">+6900 happy customers</li>
+            </ul>
           </div>
         </div>
       </div>
