--- a/caferio/index.html
+++ b/caferio/index.html
@@ -22,7 +22,7 @@
     <!--Header Section-->
     <header class="header">
       <div class="container">
-        <div class="row">
+        <div class="row items-center pt-28 xl:pt-20">
           <div class="header-left-col">
             <h4 class="header-badge">enjoy drink & food</h4>
             <h1 class="header-heading">
@@ -77,6 +77,13 @@
               </li>
               <li class="header-customers-ul-li-last">+6900 happy customers</li>
             </ul>
+          </div>
+          <div class="header-right-col">
+            <img
+              src="images/header/foods.png"
+              alt="Food image"
+              class="header-right-img"
+            />
           </div>
         </div>
       </div>
