--- a/caferio/index.html
+++ b/caferio/index.html
@@ -21,8 +21,11 @@
   <body>
     <!--Header Section-->
     <header class="header">
-      <div class="container">
-        <div class="row items-center pt-28 xl:pt-20">
+      <div class="container relative">
+        <a href="#" class="logo">
+          <img src="images/logo.png" alt="Caferio logo" class="logo-img" />
+        </a>
+        <div class="row items-center pt-28 xl:pt-20 -ml-5">
           <div class="header-left-col">
             <h4 class="header-badge">enjoy drink & food</h4>
             <h1 class="header-heading">
