--- a/caferio/index.html
+++ b/caferio/index.html
@@ -91,5 +91,18 @@
         </div>
       </div>
     </header>
+    <!--Nav section-->
+    <nav class="navigation">
+      <div class="nav-container">
+        <ul class="nav-ul">
+          <li><a href="#" class="nav-link">home</a></li>
+          <li><a href="#categories" class="nav-link">categories</a></li>
+          <li><a href="#recipes" class="nav-link">recipes</a></li>
+          <li><a href="#pricing" class="nav-link">pricing</a></li>
+          <li><a href="#testimonials" class="nav-link">testimonials</a></li>
+          <li><a href="#download" class="nav-link">download app</a></li>
+        </ul>
+      </div>
+    </nav>
   </body>
 </html>
