--- a/caferio/index.html
+++ b/caferio/index.html
@@ -19,11 +19,28 @@
     <title>Caferio</title>
   </head>
   <body>
+    <!--Nav Open-->
+    <span class="nav-open"
+      ><svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="w-6 h-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5"
+        />
+      </svg>
+    </span>
     <!--Header Section-->
     <header class="header">
       <div class="container relative">
         <a href="#" class="logo">
-          <img src="images/logo.png" alt="Caferio logo" class="logo-img" />
+          <img src="images/logo.png" alt="Caferio logo" class="image-cover" />
         </a>
         <div class="row items-center pt-28 xl:pt-20 -ml-5">
           <div class="header-left-col">
@@ -40,42 +57,42 @@
                 <img
                   src="images/customersList/user-1.jpg"
                   alt="customer image"
-                  class="header-customers-li-img"
+                  class="image-cover rounded-full"
                 />
               </li>
               <li class="header-customers-li">
                 <img
                   src="images/customersList/user-2.jpg"
                   alt="customer image"
-                  class="header-customers-li-img"
+                  class="image-cover rounded-full"
                 />
               </li>
               <li class="header-customers-li">
                 <img
                   src="images/customersList/user-3.jpg"
                   alt="customer image"
-                  class="header-customers-li-img"
+                  class="image-cover rounded-full"
                 />
               </li>
               <li class="header-customers-li">
                 <img
                   src="images/customersList/user-4.jpg"
                   alt="customer image"
-                  class="header-customers-li-img"
+                  class="image-cover rounded-full"
                 />
               </li>
               <li class="header-customers-li">
                 <img
                   src="images/customersList/user-5.jpg"
                   alt="customer image"
-                  class="header-customers-li-img"
+                  class="image-cover rounded-full"
                 />
               </li>
               <li class="header-customers-li">
                 <img
                   src="images/customersList/user-6.jpg"
                   alt="customer image"
-                  class="header-customers-li-img"
+                  class="image-cover rounded-full"
                 />
               </li>
               <li class="header-customers-ul-li-last">+6900 happy customers</li>
@@ -94,6 +111,23 @@
     <!--Nav section-->
     <nav class="navigation">
       <div class="nav-container">
+        <!-- Hamburger Button-->
+        <div class="nav-close">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-6 h-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+            />
+          </svg>
+        </div>
         <ul class="nav-ul">
           <li><a href="#" class="nav-link">home</a></li>
           <li><a href="#categories" class="nav-link">categories</a></li>
