nav menu open close, css fix and js code

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <!--Nav Open-->
-    <span class="nav-open"
-      ><svg
+    <span class="nav-open flex" id="navOpen">
+      <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
         viewBox="0 0 24 24"
@@ -109,10 +109,10 @@
       </div>
     </header>
     <!--Nav section-->
-    <nav class="navigation">
+    <nav class="navigation -right-full" id="menu">
       <div class="nav-container">
         <!-- Hamburger Button-->
-        <div class="nav-close">
+        <div class="nav-close" id="menuClose">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -138,5 +138,6 @@
         </ul>
       </div>
     </nav>
+    <script src="js/index.js" defer></script>
   </body>
 </html>
