base style category

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -138,6 +138,26 @@
         </ul>
       </div>
     </nav>
+    <!--Categories section-->
+    <section class="category" id="categories">
+      <div class="container">
+        <h1 class="heading">categories</h1>
+        <div class="row">
+          <div class="w-full p-3">
+            <a href="#" class="category-block">
+              <img
+                src="images/categories/burger.jpg"
+                alt="burger"
+                class="image-cover"
+              />
+              <div class="category-layer">
+                <span class="category-name">burger</span>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="js/index.js" defer></script>
   </body>
 </html>
