add more category and fix css

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -142,8 +142,9 @@
     <section class="category" id="categories">
       <div class="container">
         <h1 class="heading">categories</h1>
-        <div class="row">
-          <div class="w-full p-3">
+        <div class="row -mx-3">
+          <!--Category Item1-->
+          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
             <a href="#" class="category-block">
               <img
                 src="images/categories/burger.jpg"
@@ -152,6 +153,123 @@
               />
               <div class="category-layer">
                 <span class="category-name">burger</span>
+              </div>
+            </a>
+          </div>
+          <!--Category Item2-->
+          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+            <a href="#" class="category-block">
+              <img
+                src="images/categories/chicken.jpg"
+                alt="chicken"
+                class="image-cover"
+              />
+              <div class="category-layer">
+                <span class="category-name">chicken</span>
+              </div>
+            </a>
+          </div>
+          <!--Category Item3-->
+          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+            <a href="#" class="category-block">
+              <img
+                src="images/categories/chinese.jpg"
+                alt="chinese"
+                class="image-cover"
+              />
+              <div class="category-layer">
+                <span class="category-name">chinese</span>
+              </div>
+            </a>
+          </div>
+          <!--Category Item4-->
+          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+            <a href="#" class="category-block">
+              <img
+                src="images/categories/fish.jpg"
+                alt="fish"
+                class="image-cover"
+              />
+              <div class="category-layer">
+                <span class="category-name">fish</span>
+              </div>
+            </a>
+          </div>
+          <!--Category Item5-->
+          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+            <a href="#" class="category-block">
+              <img
+                src="images/categories/italian.jpg"
+                alt="italian"
+                class="image-cover"
+              />
+              <div class="category-layer">
+                <span class="category-name">italian</span>
+              </div>
+            </a>
+          </div>
+          <!--Category Item6-->
+          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+            <a href="#" class="category-block">
+              <img
+                src="images/categories/japanese.jpg"
+                alt="japanese"
+                class="image-cover"
+              />
+              <div class="category-layer">
+                <span class="category-name">japanese</span>
+              </div>
+            </a>
+          </div>
+          <!--Category Item7-->
+          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+            <a href="#" class="category-block">
+              <img
+                src="images/categories/meat.jpg"
+                alt="meat"
+                class="image-cover"
+              />
+              <div class="category-layer">
+                <span class="category-name">meat</span>
+              </div>
+            </a>
+          </div>
+          <!--Category Item8-->
+          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+            <a href="#" class="category-block">
+              <img
+                src="images/categories/pizza.jpg"
+                alt="pizza"
+                class="image-cover"
+              />
+              <div class="category-layer">
+                <span class="category-name">pizza</span>
+              </div>
+            </a>
+          </div>
+          <!--Category Item9-->
+          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+            <a href="#" class="category-block">
+              <img
+                src="images/categories/spanish.jpg"
+                alt="spanish"
+                class="image-cover"
+              />
+              <div class="category-layer">
+                <span class="category-name">spanish</span>
+              </div>
+            </a>
+          </div>
+          <!--Category Item10-->
+          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+            <a href="#" class="category-block">
+              <img
+                src="images/categories/vegetables.jpg"
+                alt="vegetables"
+                class="image-cover"
+              />
+              <div class="category-layer">
+                <span class="category-name">vegetables</span>
               </div>
             </a>
           </div>
