--- a/caferio/index.html
+++ b/caferio/index.html
@@ -144,7 +144,7 @@
         <h1 class="heading">categories</h1>
         <div class="row -mx-3">
           <!--Category Item1-->
-          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+          <div class="category-item">
             <a href="#" class="category-block">
               <img
                 src="images/categories/burger.jpg"
@@ -157,7 +157,7 @@
             </a>
           </div>
           <!--Category Item2-->
-          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+          <div class="category-item">
             <a href="#" class="category-block">
               <img
                 src="images/categories/chicken.jpg"
@@ -170,7 +170,7 @@
             </a>
           </div>
           <!--Category Item3-->
-          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+          <div class="category-item">
             <a href="#" class="category-block">
               <img
                 src="images/categories/chinese.jpg"
@@ -183,7 +183,7 @@
             </a>
           </div>
           <!--Category Item4-->
-          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+          <div class="category-item">
             <a href="#" class="category-block">
               <img
                 src="images/categories/fish.jpg"
@@ -196,7 +196,7 @@
             </a>
           </div>
           <!--Category Item5-->
-          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+          <div class="category-item">
             <a href="#" class="category-block">
               <img
                 src="images/categories/italian.jpg"
@@ -209,7 +209,7 @@
             </a>
           </div>
           <!--Category Item6-->
-          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+          <div class="category-item">
             <a href="#" class="category-block">
               <img
                 src="images/categories/japanese.jpg"
@@ -222,7 +222,7 @@
             </a>
           </div>
           <!--Category Item7-->
-          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+          <div class="category-item">
             <a href="#" class="category-block">
               <img
                 src="images/categories/meat.jpg"
@@ -235,7 +235,7 @@
             </a>
           </div>
           <!--Category Item8-->
-          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+          <div class="category-item">
             <a href="#" class="category-block">
               <img
                 src="images/categories/pizza.jpg"
@@ -248,7 +248,7 @@
             </a>
           </div>
           <!--Category Item9-->
-          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+          <div class="category-item">
             <a href="#" class="category-block">
               <img
                 src="images/categories/spanish.jpg"
@@ -261,7 +261,7 @@
             </a>
           </div>
           <!--Category Item10-->
-          <div class="w-full sm:w-6/12 md:w-4/12 lg:w-2/12 xl:w-[20%] p-3">
+          <div class="category-item">
             <a href="#" class="category-block">
               <img
                 src="images/categories/vegetables.jpg"
