--- a/caferio/index.html
+++ b/caferio/index.html
@@ -276,6 +276,15 @@
         </div>
       </div>
     </section>
+    <!--popular dishes section-->
+    <section class="popular-dishes">
+      <div class="container skew-y-2">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias eum
+        magnam obcaecati laboriosam illum, repudiandae amet suscipit velit
+        praesentium temporibus, deserunt fugiat? Est perspiciatis possimus,
+        laboriosam pariatur asperiores ab. Id.
+      </div>
+    </section>
     <script src="js/index.js" defer></script>
   </body>
 </html>
