popular dish single item css

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -279,10 +279,18 @@
     <!--popular dishes section-->
     <section class="popular-dishes">
       <div class="container skew-y-2">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias eum
-        magnam obcaecati laboriosam illum, repudiandae amet suscipit velit
-        praesentium temporibus, deserunt fugiat? Est perspiciatis possimus,
-        laboriosam pariatur asperiores ab. Id.
+        <h1 class="heading">Popular Dishes</h1>
+        <div class="row -mx-3">
+          <div class="popular-dishes-column category-item">
+            <div class="popular-dishes-image">
+              <img
+                src="images/popularDishes/biryani.jpg"
+                alt="biryani"
+                class="image-cover"
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <script src="js/index.js" defer></script>
