fix css pop. dishes layer issue and add pop. dishes title

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -109,7 +109,7 @@
       </div>
     </header>
     <!--Nav section-->
-    <nav class="navigation -right-full" id="menu">
+    <nav class="-right-full navigation" id="menu">
       <div class="nav-container">
         <!-- Hamburger Button-->
         <div class="nav-close" id="menuClose">
@@ -281,13 +281,19 @@
       <div class="container skew-y-2">
         <h1 class="heading">Popular Dishes</h1>
         <div class="row -mx-3">
-          <div class="popular-dishes-column category-item">
+          <div class="popular-dishes-column">
             <div class="popular-dishes-image">
               <img
                 src="images/popularDishes/biryani.jpg"
                 alt="biryani"
                 class="image-cover"
               />
+              <div class="popular-dishes-layer">
+                <span class="popular-dishes-label">best selling</span>
+              </div>
+            </div>
+            <div class="mt-3">
+              <a href="#" class="popular-dishes-title">biryani</a>
             </div>
           </div>
         </div>
