popular dish pricing

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -295,6 +295,7 @@
             <div class="mt-3">
               <a href="#" class="popular-dishes-title">biryani</a>
             </div>
+            <!--rating-->
             <div class="mt-1 flex space-x-2 items-center">
               <span class="popular-dishes-avg-rating">4.1</span>
               <div class="flex space-x-0">
@@ -328,6 +329,11 @@
                 </svg>
                 <span class="popular-dishes-total-rater">(69,369)</span>
               </div>
+            </div>
+            <!--pricing-->
+            <div class="popular-dishes-price-container">
+              <span class="popular-dishes-price">$3.60</span>
+              <span class="popular-dishes-discount">$3.30</span>
             </div>
           </div>
         </div>
