pop. dish buy now btn

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -335,6 +335,10 @@
               <span class="popular-dishes-price">$3.60</span>
               <span class="popular-dishes-discount">$3.30</span>
             </div>
+            <!--Buy now-->
+            <div class="mt-2">
+              <a href="#" class="btn btn-default">buy now</a>
+            </div>
           </div>
         </div>
       </div>
