--- a/caferio/index.html
+++ b/caferio/index.html
@@ -131,7 +131,7 @@
         <ul class="nav-ul">
           <li><a href="#" class="nav-link">home</a></li>
           <li><a href="#categories" class="nav-link">categories</a></li>
-          <li><a href="#recipes" class="nav-link">recipes</a></li>
+          <li><a href="#popular" class="nav-link">popular 😍</a></li>
           <li><a href="#pricing" class="nav-link">pricing</a></li>
           <li><a href="#testimonials" class="nav-link">testimonials</a></li>
           <li><a href="#download" class="nav-link">download app</a></li>
@@ -277,10 +277,59 @@
       </div>
     </section>
     <!--popular dishes section-->
-    <section class="popular-dishes">
+    <section class="popular-dishes" id="popular">
       <div class="container skew-y-2">
         <h1 class="heading">Popular Dishes</h1>
         <div class="row -mx-3">
+          <!--Popular Dish1-->
+          <div class="popular-dishes-column">
+            <div class="popular-dishes-image">
+              <img
+                src="images/popularDishes/burger.jpg"
+                alt="burger"
+                class="image-cover"
+              />
+              <div class="popular-dishes-layer">
+                <span class="popular-dishes-label bg-green-500"
+                  >best selling new</span></span
+                >
+              </div>
+            </div>
+            <div class="mt-3">
+              <a href="#" class="popular-dishes-title">burger</a>
+            </div>
+            <!--rating-->
+            <div class="mt-1 flex space-x-2 items-center">
+              <span class="popular-dishes-avg-rating">4.0</span>
+              <div class="flex space-x-0">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="w-5 h-5 fill-yellow-300"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z"
+                  />
+                </svg>
+                <span class="popular-dishes-total-rater">(9,369)</span>
+              </div>
+            </div>
+            <!--pricing-->
+            <div class="popular-dishes-price-container">
+              <span class="popular-dishes-price">$4.60</span>
+              <span class="popular-dishes-discount">$2.30</span>
+            </div>
+            <!--Buy now-->
+            <div class="mt-2">
+              <a href="#" class="btn btn-default">buy now</a>
+            </div>
+          </div>
+          <!--Popular Dish2-->
           <div class="popular-dishes-column">
             <div class="popular-dishes-image">
               <img
@@ -289,7 +338,7 @@
                 class="image-cover"
               />
               <div class="popular-dishes-layer">
-                <span class="popular-dishes-label">best selling</span>
+                <span class="popular-dishes-label bg-orange-500">best selling</span>
               </div>
             </div>
             <div class="mt-3">
@@ -333,6 +382,126 @@
             <!--pricing-->
             <div class="popular-dishes-price-container">
               <span class="popular-dishes-price">$3.60</span>
+              <span class="popular-dishes-discount">$3.30</span>
+            </div>
+            <!--Buy now-->
+            <div class="mt-2">
+              <a href="#" class="btn btn-default">buy now</a>
+            </div>
+          </div>
+          <!--Popular Dish3-->
+          <div class="popular-dishes-column">
+            <div class="popular-dishes-image">
+              <img
+                src="images/popularDishes/chessey-pizza.jpg"
+                alt="pizza"
+                class="image-cover"
+              />
+              <div class="popular-dishes-layer">
+                <span class="popular-dishes-label bg-green-500">best selling new</span>
+              </div>
+            </div>
+            <div class="mt-3">
+              <a href="#" class="popular-dishes-title">pizza (chessey)</a>
+            </div>
+            <!--rating-->
+            <div class="mt-1 flex space-x-2 items-center">
+              <span class="popular-dishes-avg-rating">4.3</span>
+              <div class="flex space-x-0">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="w-5 h-5 fill-yellow-300"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z"
+                  />
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="w-5 h-5 fill-yellow-300"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z"
+                  />
+                </svg>
+                <span class="popular-dishes-total-rater">(6,369)</span>
+              </div>
+            </div>
+            <!--pricing-->
+            <div class="popular-dishes-price-container">
+              <span class="popular-dishes-price">$10.60</span>
+              <span class="popular-dishes-discount">$1.30</span>
+            </div>
+            <!--Buy now-->
+            <div class="mt-2">
+              <a href="#" class="btn btn-default">buy now</a>
+            </div>
+          </div>
+          <!--Popular Dish4-->
+          <div class="popular-dishes-column">
+            <div class="popular-dishes-image">
+              <img
+                src="images/popularDishes/pizza.jpg"
+                alt="pizza"
+                class="image-cover"
+              />
+              <div class="popular-dishes-layer">
+                <span class="popular-dishes-label bg-orange-500">best selling</span>
+              </div>
+            </div>
+            <div class="mt-3">
+              <a href="#" class="popular-dishes-title">pizza</a>
+            </div>
+            <!--rating-->
+            <div class="mt-1 flex space-x-2 items-center">
+              <span class="popular-dishes-avg-rating">4.2</span>
+              <div class="flex space-x-0">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="w-5 h-5 fill-yellow-300"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z"
+                  />
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="w-5 h-5 fill-yellow-300"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z"
+                  />
+                </svg>
+                <span class="popular-dishes-total-rater">(99,969)</span>
+              </div>
+            </div>
+            <!--pricing-->
+            <div class="popular-dishes-price-container">
+              <span class="popular-dishes-price">$6.60</span>
               <span class="popular-dishes-discount">$3.30</span>
             </div>
             <!--Buy now-->
