pricing html code

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -50,7 +50,7 @@
               <span class="header-delivery">delivery</span> service
             </h1>
             <p class="header-paragraph">
-              What you think, What you feel, What you are = What you eat.
+              What you think 💭, What you feel ❤️‍🩹, What you are 😎 = What you eat 😍.
             </p>
             <ul class="header-customers-ul">
               <li class="header-customers-li">
@@ -509,6 +509,26 @@
               <a href="#" class="btn btn-default">buy now</a>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <!--Buffet Pricing-->
+    <section class="pricing">
+      <div class="container">
+        <h1 class="heading">pricing</h1>
+        <div class="row">
+          <!--Pricing Column1-->
+          <div class="pricing-column">
+            <div class="pricing-card">
+              <h3 class="pricing-heading">monthly</h3>
+              <div class="text-center my-2">
+                <span class="pricing-sign">$</span>
+                <span class="pricing-price">99.00</span>
+              </div>
+              <p class="pricing-message">$99/month, access selected limited food</p>
+            </div>
+          </div>
+          <!--Pricing Column1 ENDS-->
         </div>
       </div>
     </section>
