style pricing card

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -515,8 +515,8 @@
     <!--Buffet Pricing-->
     <section class="pricing">
       <div class="container">
-        <h1 class="heading">pricing</h1>
-        <div class="row">
+        <h1 class="heading text-center">pricing</h1>
+        <div class="row -mx-6 justify-center">
           <!--Pricing Column1-->
           <div class="pricing-column">
             <div class="pricing-card">
