--- a/caferio/index.html
+++ b/caferio/index.html
@@ -526,6 +526,37 @@
                 <span class="pricing-price">99.00</span>
               </div>
               <p class="pricing-message">$99/month, access selected limited food</p>
+              <ul class="mt-7">
+                <li class="pricing-list">
+                  <span class="pricing-list-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="w-4 h-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+                  </svg>
+                  </span>
+                  <span class="pricing-list-feature">1 meal per day</span>
+                </li>
+                <li class="pricing-list">
+                  <span class="pricing-list-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="w-4 h-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+                  </svg>
+                  </span>
+                  <span class="pricing-list-feature">free delivery</span>
+                </li>
+                <li class="pricing-list">
+                  <span class="pricing-list-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="w-4 h-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+                  </svg>
+                  </span>
+                  <span class="pricing-list-feature">cancel anytime</span>
+                </li>
+                <li class="pricing-list">
+                  <span class="pricing-list-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="w-4 h-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+                  </svg>
+                  
+                  </span>
+                  <span class="pricing-list-feature">custom food order</span>
+                </li>
+              </ul>
             </div>
           </div>
           <!--Pricing Column1 ENDS-->
