pricing order now button

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -552,11 +552,11 @@
                   <span class="pricing-list-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="w-4 h-4">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
                   </svg>
-                  
                   </span>
                   <span class="pricing-list-feature">custom food order</span>
                 </li>
               </ul>
+              <div class="mt-7"><a href="#" class="btn btn-default btn-lg">order now &rarr;</a></div>
             </div>
           </div>
           <!--Pricing Column1 ENDS-->
