pricing discount label

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -520,6 +520,7 @@
           <!--Pricing Column1-->
           <div class="pricing-column">
             <div class="pricing-card">
+              <span class="pricing-label">student 20%</span>
               <h3 class="pricing-heading">monthly</h3>
               <div class="text-center my-2">
                 <span class="pricing-sign">$</span>
