second pricing card

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -519,14 +519,14 @@
         <div class="row -mx-6 justify-center">
           <!--Pricing Column1-->
           <div class="pricing-column">
-            <div class="pricing-card">
+            <div class="pricing-card bg-yellow-50 border-2 border-yellow-300 border-dashed">
               <span class="pricing-label">student 20%</span>
               <h3 class="pricing-heading">monthly</h3>
               <div class="text-center my-2">
                 <span class="pricing-sign">$</span>
-                <span class="pricing-price">99.00</span>
+                <span class="pricing-price">299.00</span>
               </div>
-              <p class="pricing-message">$99/month, access selected limited food</p>
+              <p class="pricing-message">$299 per month, access selected limited food</p>
               <ul class="mt-7">
                 <li class="pricing-list">
                   <span class="pricing-list-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="w-4 h-4">
@@ -561,6 +561,50 @@
             </div>
           </div>
           <!--Pricing Column1 ENDS-->
+          <!--Pricing Column2-->
+          <div class="pricing-column">
+            <div class="pricing-card bg-orange-200">
+              <span class="pricing-label">student 20%</span>
+              <h3 class="pricing-heading">annually</h3>
+              <div class="text-center my-2">
+                <span class="pricing-sign">$</span>
+                <span class="pricing-price">3000.00</span>
+              </div>
+              <p class="pricing-message">$250 per month, access  unlimited food</p>
+              <ul class="mt-7">
+                <li class="pricing-list">
+                  <span class="pricing-list-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="w-4 h-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+                  </svg>
+                  </span>
+                  <span class="pricing-list-feature">2 meals per day</span>
+                </li>
+                <li class="pricing-list">
+                  <span class="pricing-list-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="w-4 h-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+                  </svg>
+                  </span>
+                  <span class="pricing-list-feature">free delivery</span>
+                </li>
+                <li class="pricing-list">
+                  <span class="pricing-list-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="w-4 h-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+                  </svg>
+                  </span>
+                  <span class="pricing-list-feature">cancel anytime</span>
+                </li>
+                <li class="pricing-list">
+                  <span class="pricing-list-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="w-4 h-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+                  </svg>
+                  </span>
+                  <span class="pricing-list-feature">custom food order</span>
+                </li>
+              </ul>
+              <div class="mt-7"><a href="#" class="btn btn-default btn-lg">order now &rarr;</a></div>
+            </div>
+          </div>
+          <!--Pricing Column2 ENDS-->
         </div>
       </div>
     </section>
