add pricing id for scroll

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -513,7 +513,7 @@
       </div>
     </section>
     <!--Buffet Pricing-->
-    <section class="pricing">
+    <section class="pricing" id="pricing">
       <div class="container">
         <h1 class="heading text-center">pricing</h1>
         <div class="row -mx-6 justify-center">
