--- a/caferio/index.html
+++ b/caferio/index.html
@@ -608,6 +608,15 @@
         </div>
       </div>
     </section>
+    <!--Testimonials section-->
+    <section class="testimonials">
+      <div class="container">
+        <div class="testimonials-heading-block">
+          <h1 class="heading">testimonials</h1>
+          <h1 class="testimonials-heading">Caferio is trusted brand with the tastiest food, because of happy taste bud of our customers</h1>
+        </div>
+      </div>
+    </section>
     <script src="js/index.js" defer></script>
   </body>
 </html>
