testimonials style structure

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -615,6 +615,14 @@
           <h1 class="heading">testimonials</h1>
           <h1 class="testimonials-heading">Caferio is trusted brand with the tastiest food, because of happy taste bud of our customers</h1>
         </div>
+        <div class="row -mx-3">
+          <div class="testimonials-left-col">
+            <div class="row -mx-6">
+              <div class="testimonials-comment-col"></div>
+            </div>
+          </div>
+          <div class="testimonials-right-col"></div>
+        </div>
       </div>
     </section>
     <script src="js/index.js" defer></script>
