--- a/caferio/index.html
+++ b/caferio/index.html
@@ -618,7 +618,17 @@
         <div class="row -mx-3">
           <div class="testimonials-left-col">
             <div class="row -mx-6">
-              <div class="testimonials-comment-col"></div>
+              <div class="testimonials-comment-col">
+                <div class="testimonials-user">
+                  <span class="testimonials-user-img">
+                    <img src="./images/customersList/user-1.jpg" alt=" customers" class="image-cover rounded-full">
+                  </span>
+                  <div class="ml-4">
+                    <span class="testimonials-user-name">Mohd. Allah</span>
+                    <a href="#" class="testimonials-user-twitter">@moh</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="testimonials-right-col"></div>
