--- a/caferio/index.html
+++ b/caferio/index.html
@@ -619,6 +619,7 @@
           <div class="testimonials-left-col">
             <div class="row -mx-6">
               <div class="testimonials-comment-col">
+                <!--user-->
                 <div class="testimonials-user">
                   <span class="testimonials-user-img">
                     <img src="./images/customersList/user-1.jpg" alt=" customers" class="image-cover rounded-full">
@@ -628,6 +629,10 @@
                     <a href="#" class="testimonials-user-twitter">@moh</a>
                   </div>
                 </div>
+                <!--reviews-->
+                <p class="testimonials-review">
+                  <span class="testimonials-review-quote">&#x201F;</span>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eaque fugit repudiandae eos vitae cum, voluptas, quia neque provident laudantium commodi odit magni aliquam molestias dignissimos, tenetur ullam voluptatibus impedit.</p>
               </div>
             </div>
           </div>
