add more testimonials

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -618,6 +618,7 @@
         <div class="row -mx-3">
           <div class="testimonials-left-col">
             <div class="row -mx-6">
+              <!--testimonial1-->
               <div class="testimonials-comment-col">
                 <!--user-->
                 <div class="testimonials-user">
@@ -626,7 +627,58 @@
                   </span>
                   <div class="ml-4">
                     <span class="testimonials-user-name">Mohd. Allah</span>
-                    <a href="#" class="testimonials-user-twitter">@moh</a>
+                    <a href="#" class="testimonials-user-twitter">@big-bang</a>
+                  </div>
+                </div>
+                <!--reviews-->
+                <p class="testimonials-review">
+                  <span class="testimonials-review-quote">&#x201F;</span>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eaque fugit repudiandae eos vitae cum, voluptas, quia neque provident laudantium commodi odit magni aliquam molestias dignissimos, tenetur ullam voluptatibus impedit.</p>
+              </div>
+              <!--testimonial2-->
+              <div class="testimonials-comment-col">
+                <!--user-->
+                <div class="testimonials-user">
+                  <span class="testimonials-user-img">
+                    <img src="./images/customersList/user-2.jpg" alt=" customers" class="image-cover rounded-full">
+                  </span>
+                  <div class="ml-4">
+                    <span class="testimonials-user-name">Ram. Ram</span>
+                    <a href="#" class="testimonials-user-twitter">@politics-base</a>
+                  </div>
+                </div>
+                <!--reviews-->
+                <p class="testimonials-review">
+                  <span class="testimonials-review-quote">&#x201F;</span>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eaque fugit repudiandae eos vitae cum, voluptas, quia neque provident laudantium commodi odit magni aliquam molestias dignissimos, tenetur ullam voluptatibus impedit.</p>
+              </div>
+              <!--testimonial3-->
+              <div class="testimonials-comment-col">
+                <!--user-->
+                <div class="testimonials-user">
+                  <span class="testimonials-user-img">
+                    <img src="./images/customersList/user-3.jpg" alt=" customers" class="image-cover rounded-full">
+                  </span>
+                  <div class="ml-4">
+                    <span class="testimonials-user-name">Adonai. Torah. </span>
+                    <a href="#" class="testimonials-user-twitter">@coin-base</a>
+                  </div>
+                </div>
+                <!--reviews-->
+                <p class="testimonials-review">
+                  <span class="testimonials-review-quote">&#x201F;</span>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eaque fugit repudiandae eos vitae cum, voluptas, quia neque provident laudantium commodi odit magni aliquam molestias dignissimos, tenetur ullam voluptatibus impedit.</p>
+              </div>
+              <!--testimonial2-->
+              <div class="testimonials-comment-col">
+                <!--user-->
+                <div class="testimonials-user">
+                  <span class="testimonials-user-img">
+                    <img src="./images/customersList/user-4.jpg" alt=" customers" class="image-cover rounded-full">
+                  </span>
+                  <div class="ml-4">
+                    <span class="testimonials-user-name">Jesus. Christ</span>
+                    <a href="#" class="testimonials-user-twitter">@wood-base</a>
                   </div>
                 </div>
                 <!--reviews-->
