add more testimonials gallery images

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -609,13 +609,13 @@
       </div>
     </section>
     <!--Testimonials section-->
-    <section class="testimonials">
+    <section class="testimonials" id="testimonials">
       <div class="container">
         <div class="testimonials-heading-block">
           <h1 class="heading">testimonials</h1>
           <h1 class="testimonials-heading">Caferio is trusted brand with the tastiest food, because of happy taste bud of our customers</h1>
         </div>
-        <div class="row -mx-3">
+        <div class="row items-center -mx-3">
           <div class="testimonials-left-col">
             <div class="row -mx-6">
               <!--testimonial1-->
@@ -688,7 +688,71 @@
               </div>
             </div>
           </div>
-          <div class="testimonials-right-col"></div>
+          <div class="testimonials-right-col">
+            <div class="row -mx-3">
+              <!--gallery image1-->
+              <div class="testimonials-gallery-col">
+                <div class="testimonials-gallery">
+                  <img src="images/categories/burger.jpg" alt="food gallery" class="image-cover testimonials-gallery-img" id="gallery">
+                </div>
+              </div>
+              <!--gallery image2-->
+              <div class="testimonials-gallery-col">
+                <div class="testimonials-gallery">
+                  <img src="images/categories/chicken.jpg" alt="food gallery" class="image-cover testimonials-gallery-img" id="gallery">
+                </div>
+              </div>
+              <!--gallery image3-->
+              <div class="testimonials-gallery-col">
+                <div class="testimonials-gallery">
+                  <img src="images/categories/chinese.jpg" alt="food gallery" class="image-cover testimonials-gallery-img" id="gallery">
+                </div>
+              </div>
+              <!--gallery image4-->
+              <div class="testimonials-gallery-col">
+                <div class="testimonials-gallery">
+                  <img src="images/categories/fish.jpg" alt="food gallery" class="image-cover testimonials-gallery-img" id="gallery">
+                </div>
+              </div>
+              <!--gallery image5-->
+              <div class="testimonials-gallery-col">
+                <div class="testimonials-gallery">
+                  <img src="images/categories/italian.jpg" alt="food gallery" class="image-cover testimonials-gallery-img" id="gallery">
+                </div>
+              </div>
+              <!--gallery image6-->
+              <div class="testimonials-gallery-col">
+                <div class="testimonials-gallery">
+                  <img src="images/categories/japanese.jpg" alt="food gallery" class="image-cover testimonials-gallery-img" id="gallery">
+                </div>
+              </div>
+              <!--gallery image7-->
+              <div class="testimonials-gallery-col">
+                <div class="testimonials-gallery">
+                  <img src="images/categories/meat.jpg" alt="food gallery" class="image-cover testimonials-gallery-img" id="gallery">
+                </div>
+              </div>
+              <!--gallery image8-->
+              <div class="testimonials-gallery-col">
+                <div class="testimonials-gallery">
+                  <img src="images/categories/pizza.jpg" alt="food gallery" class="image-cover testimonials-gallery-img" id="gallery">
+                </div>
+              </div>
+              <!--gallery image9-->
+              <div class="testimonials-gallery-col">
+                <div class="testimonials-gallery">
+                  <img src="images/categories/spanish.jpg" alt="food gallery" class="image-cover testimonials-gallery-img" id="gallery">
+                </div>
+              </div>
+              <!--gallery image10-->
+              <div class="testimonials-gallery-col">
+                <div class="testimonials-gallery">
+                  <img src="images/categories/vegetables.jpg" alt="food gallery" class="image-cover testimonials-gallery-img" id="gallery">
+                </div>
+              </div>
+              <!-- End of Gallery Images -->
+            </div>
+          </div>
         </div>
       </div>
     </section>
